# observator

./: .env.prod.example  .gitignore  CLAUDE.md  DATA_AUDIT_REPORT.md  DATA_REALITY_CHECK.md  DB_COMPLETE_AUDIT.md  DB_SCHEMA.md  DEPLOYMENT_GUIDE.md  FULL_DATA_AUDIT.md  Observator_PRD.md  README.md  TEST_REPORT.md  USER_GUIDE.md  VIDEO_DIRECTIONS.md  VIDEO_SCRIPT.md  docker-compose.prod.yml
docker/: backend.Dockerfile  (+2 more)
observator-backend/: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
observator-backend/.github/workflows/: docker-build.yml
observator-backend/alembic/: env.py
observator-backend/alembic/versions/: 132039ec7832_add_dimensions_facts_evidence_dashboard.py  2582726033da_initial_schema.py  a3f7c8e21b4d_add_source_tracking_to_evidence.py  b4e9d1f53a2c_add_unique_constraints_for_real_data.py  b7e2a1f9c345_add_onet_weight_columns.py  c5a2d8f91e3b_add_file_type_size_to_dataset_registry.py  d7f3a9b12c4e_add_dataset_id_indexes.py  e8b4c2d71f5a_add_quality_score_to_dataset_registry.py  f9a3b7d82c1e_add_data_quality_tables.py
observator-backend/deploy/: userdata.sh
observator-backend/scripts/: DATA_MAPPING.md  analyze_clean_data.py  analyze_real_data.py  classify_jobs.py  count_tables.sql  create_views.sql  create_views_and_forecasts.py  fix_users_after_restore.py  generate_forecasts_only.py  init_db.py  load_bayanat_all.py  load_onet_prod.py  purge_all_data.py  reseed_esco.py  restore_backup.sh  seed_admin_user.py  seed_gap_fill_data.py  seed_master_tables.py  seed_real_data.py  seed_regions.py  seed_sectors.py  seed_supply_data.py  seed_time.py  verify_production.py  verify_schema.py
observator-backend/src/: config.py  dependencies.py  main.py
observator-backend/tests/: conftest.py  test_analytics_engine.py  test_bug_fixes.py  test_cache_service.py  test_cleaning_log.py  test_data_quality_profiler.py  test_golden_validation.py  test_integration_real.py  test_loader_cleaning_log.py  test_new_features_api.py  test_profiler.py  test_real_pipeline_files.py
(+250 files in other folders)
